# EtablissementMedine

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.json  postmanCollection.json  postmanEnvironment.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
apps/auth/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  tokens.py  types.py  urls.py  utils.py  validators.py  views.py
apps/auth/api/: details_response.py  drf_schema.py  serializers.py  text.py  urls.py  views.py
apps/auth/migrations/: 0001_initial.py  0002_alter_codechecker_token.py  0002_initial.py
apps/auth/test/functional/: test_signup_api_views.py
apps/auth/test/models/: test_CodeChecker_model.py
apps/auth/test/serializers/: test_login_serializer.py  test_reset_password_serializer.py  test_signup_serializer.py
apps/auth/test/test_models/: test_model_managers.py  test_user_model.py  test_user_model_managers.py
apps/auth/test/views/: test_login_api_views.py  test_signup_api_views.py
apps/auth/tests/: test_models.py  tests_serializers.py
apps/auth/tests/views/api/: test_activation_api_views.py  test_login_api_views.py  test_signup_api_views.py
apps/base/: admin.py  exceptions.py  fixtures.py  functions.py  mail.py  models.py  response.py  sender.py  validators.py
apps/base/management/commands/: load_data.py  loaddata.py
apps/cart/: __init__.py  admin.py  apps.py  models.py  services.py  signals.py
apps/cart/api/: drf_schema.py  serializers.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_alter_orderitem_options_alter_cart_created_at_and_more.py
apps/core/: admin.py  exceptions.py  fixtures.py  method.py  models.py  renderers.py  response.py  sender.py  swagger.py  utils.py
apps/core/management/commands/: load_data.py
apps/core/templatetags/: utils.py
apps/customer/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py
apps/customer/migrations/: 0001_initial.py  0002_initial.py
apps/home/: admin.py  tests.py  urls.py  views.py
apps/home/test/: test_views.py
apps/home/tests/: test_views.py
apps/orders/: admin.py  apps.py  models.py  services.py  types.py
apps/orders/api/: serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_created_at_alter_order_public_id_and_more.py
apps/payments/: admin.py  apps.py  models.py
apps/payments/api/: serializers.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_alter_payment_created_at_alter_payment_public_id_and_more.py
apps/product/: admin.py  apps.py  models.py  translation.py  utils.py
apps/product/api/: serializers.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py
apps/products/: __init__.py  admin.py  apps.py  models.py  signals.py  translation.py  urls.py  utils.py  views.py
apps/products/api/: serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_product_thumbnail_alter_productimage_image.py  0003_product_color_product_size.py  0004_color_remove_product_size_remove_product_color_and_more.py  0005_alter_productadvertising_options_and_more.py  0006_alter_product_color.py  0007_alter_category_created_at_alter_category_public_id_and_more.py
apps/shopping/: admin.py  apps.py  models.py  services.py
apps/shopping/api/: serializers.py  urls.py  views.py
apps/shopping/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  apps.py  appsAuthConfig.py  managers.py  models.py  serializers.py  signals.py  tokens.py  types.py  views.py
apps/users/api/: serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_first_name.py  0003_alter_user_public_id.py
apps/users/serializers/: auth.py
apps/users/test/test_models/: test_model_managers.py  test_user_model.py
apps/users/tests/tests_models/: test_address_model.py  test_user_model.py
apps/users/urls/: auth.py
apps/users/views/: auth.py
apps/utils/: baseModel.py  email.py  functions.py  renderers.py  response.py  validators.py
components/cardWarapper/: cardWarapper.html  cardWarapper.js  cardWarapper.py
components/carousel/: carousel.html  carousel.js  carousel.py
components/head/: head.html  head.js  head.py
components/menu/: menu.html  menu.py
components/productCard/: productCard.html  productCard.py
components/searchBar/: searchBar.html  searchBar.js  searchBar.py
components/sidebarCategory/: sidebarCategory.html  sidebarCategory.py
config/: settings.py  swagger.py  urls.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py  utils.py
config/urls/: __init__.py  api.py  web.py
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
requirements/: requirements.txt  requirementsDev.txt
static/auth/sass/: main.scss
static/error/css/: style.css
static/error/js/: script.js
static/error/sass/: 404.scss  main.scss
static/global/: package.json
static/global/css/: style.css  styles.css
static/global/js/: script.js  slider.js
static/global/sass/: main.scss
static/global/sass/components/: cardWarapper.scss  carousel.scss  head.scss  productCard.scss  sidebarCategory.scss  slider.scss
static/global/sass/pages/: 404.scss  home.scss
static/global/sass/settings/: _global.scss  _mixin.scss  _variables.scss
templates/: base.html
templates/admin/: base.html
templates/auth/: activation-success.html
templates/auth/mail/: activation-success.html  activation.html  activation_code.html  activation_link.html  request-rest-password.html  rest-password-success.html
templates/components/: head.html
templates/error/: 404.html
templates/home/: index.html
templates/products/: list.html
templates/svg/: auto.html  cart.html  clos.html  dark.html  favorite.html  flash.html  heart.html  light.html  search.html  star-empty.html  star-half.html  star.html  user.html
templates/users/mail/: activation.html  rest-password-success.html
